# emoji_search

./: ..swiftdoc  ..swiftsourceinfo  Cargo.toml  build.rs  emoji_search.swiftdoc  emoji_search.swiftmodule  emoji_search.swiftsourceinfo
data/: alphabet-glossary.json  emoogle-emoji-glossary.json  emoogle-keyword-most-relevant-emoji.json
src/: constants.rs  error.rs  lib.rs  main.rs
src/data/: emoogle-emoji-keywords.json
src/search/: best_matching.rs  mod.rs  multiple_words.rs  single_word.rs
src/utils/: get_emojis.rs  mod.rs  preprocess.rs
src/utils/nlp/: mod.rs  parts_of_speech.rs  stemmer.rs
