[package]
name = "emoji-search"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for searching emojis based on keywords"
license = "MIT"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
once_cell = "1.18"
async-trait = "0.1"
futures = "0.3"
emojis = { version = "0.6.4", features = ["serde"] }

[dependencies.uniffi]
version = "0.29"
features = ["bindgen"]

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[lib]
name = "emoji_search"
crate-type = ["cdylib", "staticlib", "rlib"]
