[package]
name = "emoji_search"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for searching emojis based on keywords"
license = "MIT"

# The name of the cli to generate from
[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
once_cell = "1.18"
async-trait = "0.1"
futures = "0.3"
emojis = { path = "../emojis" }
bitcode = { version = "0.6.6", features = ["serde"] }
serde-protobuf = "0.8.2"
log = "0.4.27"
env_logger = "0.11.8"
serde_cbor = "0.11.2"

[dependencies.uniffi]
version = "0.29"
features = ["bindgen"]

[build-dependencies]
serde          = { version = "1.0", features = ["derive"] }
emojis = { path = "../emojis"}
serde_json     = "1.0"
bitcode        = { version = "0.6.6", features = ["std","serde"] }
uniffi = { version = "0.29", features = ["build"] }


# Generating a library in all the main formats just in case
[lib]
name = "emoji_search"
crate-type = ["cdylib", "staticlib", "rlib"]
